# fontParts

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  NEWS.rst  README.rst  dev-requirements.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/scripts/: supported_python_versions.py
.github/workflows/: black.yml  lint_test.yml  mypy.yml  publish-package.yml  ruff.yml  run-tests.yml
Lib/fontParts/: __init__.py  ui.py  world.py
Lib/fontParts/base/: anchor.py  annotations.py  bPoint.py  base.py  bounds.py  color.py  compatibility.py  component.py  contour.py  deprecated.py  features.py  font.py  glyph.py  groups.py  guideline.py  image.py  info.py  kerning.py  layer.py  lib.py  normalizers.py  point.py  segment.py  type.py  types.py
Lib/fontParts/fontshell/: anchor.py  base.py  component.py  contour.py  features.py  font.py  glyph.py  groups.py  guideline.py  image.py  info.py  kerning.py  layer.py  lib.py  point.py  test.py
Lib/fontParts/fontshell/otf/: font.py
Lib/fontParts/fontshell/ttf/: font.py  test.py
Lib/fontParts/nonelab/: features.py  glyph.py  test.py
Lib/fontParts/objects/base/: __init__.py  anchor.py  bPoint.py  base.py  component.py  contour.py  features.py  font.py  glyph.py  groups.py  guideline.py  image.py  info.py  kerning.py  layer.py  lib.py  point.py  segment.py
Lib/fontParts/objects/nonelab/: __init__.py
Lib/fontParts/opentype/: component.py  contour.py  font.py  glyph.py  info.py  kerning.py  layer.py
Lib/fontParts/opentype/test/: test_font.py
Lib/fontParts/test/: __init__.py  legacyPointPen.py  test_anchor.py  test_bPoint.py  test_bounds.py  test_color.py  test_component.py  test_contour.py  test_deprecated.py  test_features.py  test_font.py  test_fuzzyNumber.py  test_glyph.py  test_groups.py  test_guideline.py  test_image.py  test_info.py  test_kerning.py  test_layer.py  test_lib.py  test_normalizers.py  test_point.py  test_segment.py  test_world.py
documentation/: Makefile
documentation/examples/: README.rst
documentation/examples/howtos/: buildingAccents_00.py  interpolate_00.py  lowLevel_00.py  otFeatures_00.py  otFeatures_01.py  scripting_00.py  scripting_01.py  scripting_02.py  test.ufo  transformations_00.py  understandingContours_00.py  understandingContours_02.py  understandingContours_03.py
documentation/examples/howtos/helpneeded/: buildingAccents_01.py  buildingAccents_02.py  generatingFonts_00.py  glifNames_00.py  glyphMath_00.py  interpolate_01.py  interpolate_02.py  kerning_00.py  makeUFO_00.py  pens_00.py  pens_01.py  pens_02.py  pens_03.py  pens_04.py  pens_05.py  pens_06.py
documentation/examples/objects/: RAnchor_00.py  RAnchor_01.py  RComponent_00.py  RComponent_01.py  RContour_00.py  RFont_00.py  RFont_01.py  RFont_02.py  RFont_03.py  RFont_04.py  RFont_05.py  RGlyph_00.py  RGlyph_01.py  RGlyph_02.py  RGlyph_03.py  RInfo_00.py  RLib_00.py  RPoint_00.py  RSegment_00.py  RSegment_01.py  RSegment_02.py  bPoint_00.py  bPoint_01.py  pen_00.py  psHints_00.py
documentation/examples/objects/helpneeded/: RKerning_00.py  psHints_01.py  psHints_02.py  psHints_03.py
documentation/examples/talks/helpneeded/: interpol_00.py  interpol_01.py  interpol_02.py  interpol_03.py  interpol_04.py  interpol_05.py  interpol_06.py  interpol_07.py  interpol_08.py  interpol_09.py  nonelab_00.py  session1_00.py  session1_01.py  session1_02.py  session1_03.py  session1_04.py  session1_05.py  session1_06.py  session1_07.py  session1_08.py  session1_09.py  session2_00.py  session2_01.py  session2_02.py  session2_03.py  session2_04.py  session2_05.py  session2_06.py  session2_07.py  session2_08.py  session2_09.py  session2_10.py  session2_11.py  session3_00.py  session3_01.py  session3_02.py  session3_03.py  session3_04.py  session3_05.py  session6_00.py  (+11 more)
documentation/source/: conf.py  index.rst
documentation/source/_themes/fontPartsTheme/static/: fontparts.css  fontparts.css.map  fontparts.sass  sass2css.py
documentation/source/_themes/fontPartsTheme/static/partials/: elements.sass  general.sass
documentation/source/development/: documenting.rst  index.rst
documentation/source/environments/objects/: base.rst  font.rst  index.rst  normalizers.rst
documentation/source/gettingstarted/: index.rst
documentation/source/objectref/: index.rst
documentation/source/objectref/fontpartsworld/: index.rst
documentation/source/objectref/objects/: anchor.rst  features.rst  font.rst  glyph.rst  groups.rst  guideline.rst  index.rst  info.rst  kerning.rst  layer.rst  point.rst
documentation/source/objectref/valuetypes/: index.rst
documentation/tools/: docstring.py
test/objects/base/: test_lib.py
